# cereja-ai

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pythonpackage.yml  pythonpublish.yml
cereja_ai/: __init__.py
cereja_ai/losses/: timeseries.py
cereja_ai/metrics/: timeseries.py
cereja_ai/vision/: _base.py  utils.py
tests/: __init__.py
